# de-week3-advancedtesting-adedamola-adams

./: README.md  pyproject.toml  requirements.txt  shoplink_cleaned.json
.github/workflows/: test.yml
order_pipeline/: analyzer.py  exporter.py  pipeline.py  reader.py  transformer.py  validator.py
src/calculator/: __init__.py  data_processor.py  operations.py
tests/: conftest.py  test_analyzer.py  test_data_processor.py  test_exporter.py  test_operations.py  test_pipeline.py  test_reader.py  test_transformer.py  test_validator.py
